Bug 118171 - Complex symbols with wrong position after copy / paste
Summary: Complex symbols with wrong position after copy / paste
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.0.3.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0
Keywords: regression
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2018-06-14 17:06 UTC by Rainer Bielefeld Retired
Modified: 2025-04-07 14:56 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (15.98 KB, application/vnd.oasis.opendocument.graphics)
2018-06-14 17:06 UTC, Rainer Bielefeld Retired
Details
How it looks in LibreOffice 5.2 (21.05 KB, image/png)
2018-06-18 18:18 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2018-06-14 17:06:08 UTC
Created attachment 142755 [details]
sample document

Steps how to reproduce NOT reproducible REPRODUCIBLE with Version: 6.0.3.2 (x64)
Build-ID: 8f48d515416608e3a835360314dac7e47fd0b821
CPU-Threads: 4; BS: Windows 6.1; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group:

1. open attached sample document
2. after having seen the bad y-position for the relais symbol on sheet 2 from
   my test on sheet 2 delete everything except the horizontal line
3. On sheet 1ˋSelect (click) blue square → <ctrl+c for copy> → go to sheet 2
    → ctrl+v for pasteˊ
   » When you check position of pasted symbol it will be the same as you 
     see for source 
3. On sheet 1ˋSelect (click) relais symbol → <ctrl+c for copy> → go to sheet 2
    → ctrl+v for pasteˊ                                                       ☺
   » When you check position of pasted symbol it will be DIFFERENT to the one 
     of the source symbol                                                     😠

a) This one sounds similar to 
   "Bug 73438 - Copy and paste skews offset position with respect to grid", 
    but that one is WFM for test with above mentioned version.
b) this issue makes LibO more or less unusable for technical sketches, where
   you try to do as much as possible work with copy /paste
Comment 1 Rainer Bielefeld Retired 2018-06-14 17:08:17 UTC
c) no obvious DUPs found with <https://bugs.documentfoundation.org/buglist.cgi?cmdtype=dorem&remaction=run&namedcmd=DUPs118171&sharer_id=19321>
Comment 2 Rainer Bielefeld Retired 2018-06-14 17:09:09 UTC
(In reply to Rainer Bielefeld Retired from comment #0)
Should have been 
"Steps how to reproduce with Version: 6.0.3.2 (x64)"
in original report
Comment 3 V Stuart Foote 2018-06-14 19:40:39 UTC
Confirmed on Windows 10 Ent 64-bit en-US with
Version: 6.1.0.0.alpha1 (x64)
Build ID: cb47f0d320994e001bc38dc2ee9b7d957b15e6ab
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (en_US); Calc: group

If I enter the group, and remove the solid round line end of the junction, on paste the symbol is pasted correctly. A different line end (e.g. unfilled diamond) will be displaced a different amount.

@Armin, any thoughts?
Comment 4 Xisco Faulí 2018-06-18 18:18:51 UTC
Created attachment 142879 [details]
How it looks in LibreOffice 5.2

it seems it has improved since LibreOffice 5.2 :)
Comment 5 Rainer Bielefeld Retired 2019-04-14 16:40:03 UTC
For me not improved with Version: 6.3.0.0.alpha0+ 
Build ID: 2e3b0c5d42d60d46cd9f8b8eda9424b095c63418; Windows 6.1;         😥
Comment 6 xordevoreaux 2021-04-12 14:28:37 UTC
Still a problem in 

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7a0e0a84a02f505200331c19b28d45e898cd5a12
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

I wrestle with this all the time, with shapes of various kinds not copying to the precise coordinates from where they're copied.
Comment 7 QA Administrators 2023-04-13 03:23:43 UTC Comment hidden (obsolete)
Comment 8 Rainer Bielefeld Retired 2023-04-13 09:10:59 UTC
Still REPRODUCIBLE                                               😥😥
with Server Installation of Version: 7.6.0.0.alpha0+ (X86_64) 
Build ID: 0484a9a3f5e2ecb678f6fb41bbb251529e89c00d
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded – Special new User Profile for testing
Comment 9 Commit Notification 2025-03-21 07:53:25 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/11f7f34b90151b6cb01754a35bad66061322a119

tdf#118171 - Snap rectangles of objects without line width

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.