tdf#118171 - Snap rectangles of objects without line width

Change-Id: I10d984438826362035add494e0a2431824e36519
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183142
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins